<resources>
    <string name="app_name">BioGo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_input">Search</string>
    <string name="player_profile_Activity">Profile</string>
    <string name="specie_Activity">Specie</string>
    <string name="ranking_Activity">Ranking</string>

    <!--    Start Activity-->
    <string name="main_button_play">Play</string>
    <string name="connection_alert_title"> No connection</string>
    <string name="connection_alert_ok"> OK</string>
    <string name="connection_alert_text"> Please turn on your wifi and location </string>

    <!--    Home Fragment-->
    <string name="view_more">More</string>
    <string name="add_btn">Add to catalog</string>
    <string name="empty_recently_added"> there are not recent activity</string>
    <string name="take_picture">Take picture</string>
    <string name="upload_picture">Upload picture</string>
    <string name="fail_msg">Something went wrong :\'(,  try later </string>

    <!-- Submit photo Activity -->
    <string name="submit_photo_activity">Submit photo </string>
    <string name="submit_btn">Submit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="suggest_specie"> Suggest specie</string>
    
    <!-- Search Fragment -->
    <string name="search_helper_text">Type at least 3 characters </string>


    <!--    Settings Activity-->
    <string name="settings_Activity">Settings</string>
    <string name="notification">Notifications</string>
    <string name="camera_feature">Auto camera mode</string>
    <string name="about">About BioGo</string>
    <string name="about_text">BioGo is a “photo-to-catch” based mobile game, where the objective is to catch as much as
        animals and plants species as possible. For every photo of a specie submitted, the player itself receives its
        associated points. Points are important for a player’s ranking. BioGo is being developed for a master’s degree
        class on Mobile Computing. <br />Group 2: <br /> João Mendes fc53300 <br /> José Ferreira fc53311
    </string>
    <string name="app_version">Version: </string>
    <string name="app_version_status">Alpha</string>

    <!--    Catalog Activity-->
    <string name="catalog_Activity">Catalog</string>
    <string name="empty_catalog">This catalog is empty :\'(</string>

    <!--    Pending Activity-->
    <string name="pending_Activity"> Pending</string>
    <string name="pending_list">Pending List</string>
    <string name="empty_pending_list">There are no evaluation pending :)</string>

    <!--    Photo Activity-->
    <string name="photo_Activity">Photo</string>
    <string name="photo_status_valid">Valid</string>
    <string name="photo_status_invalid">Invalid</string>
    <string name="photo_status_pending">Pending</string>
    <string name="photo_evaluate">Evaluate </string>

    <string name="evaluation_dialog_title">Evaluate capture</string>
    <string name="evaluation_dialog_save">Save </string>
    <string name="evaluation_dialog_cancel">Cancel</string>

    <!-- Profile -->
    <string name="n_catch">Nº of catch</string>
    <string name="ranking">Ranking</string>
    <string name="counter">9999</string>
    <string name="username">username</string>
    <string name="user_avatar">user avatar</string>
    <string name="status">Status</string>
    <string name="actions">See</string>


</resources>